--- a/IdentificadorDeItens/templates/index.html
+++ b/IdentificadorDeItens/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block titulo %} Identificação de itens {% endblock %}
 
-{% block conteudo %}
+{% block content %}
     <section class="mb-5">
       <h2 class="section-title">Sobre o Projeto</h2>
       <p>O <strong>Integratech</strong> é um museu interativo criado por estudantes do IF Goiano que reúne relíquias tecnológicas, exposições interativas, e experiências digitais para aproximar a comunidade do universo da ciência e da inovação. Além de preservar a história da tecnologia, promovemos inclusão digital e atividades educativas para todas as idades.</p>
