--- a/IdentificadorDeItens/templates/sistema_de_cameras.html
+++ b/IdentificadorDeItens/templates/sistema_de_cameras.html
@@ -19,7 +19,7 @@
               <div class="card-icon mb-3">🤖</div>
               <h5 class="card-title">Em tempo real</h5>
               <p class="card-text">Aponde a sua camera para um item do museu IntegraTech.</p>
-                <a class="btn btn-info" href="{% url 'gravar_frames' %}">Abrir camera</a>
+                <a class="btn btn-info" href="{% url 'identificador:gravar_frames' %}">Abrir camera</a>
             </div>
           </div>
         </div>
@@ -29,7 +29,7 @@
               <div class="card-icon mb-3">🎓</div>
               <h5 class="card-title">Por video</h5>
               <p class="card-text">Carregue um video para o sistema de Identificação processar.</p>
-                <a class="btn btn-info" href="{% url 'sistema_de_cameras' %}">Carregar um video</a>
+                <a class="btn btn-info" href="{% url 'identificador:sistema_de_cameras' %}">Carregar um video</a>
             </div>
           </div>
         </div>
