--- a/IdentificadorDeItens/templates/sistema_de_cameras.html
+++ b/IdentificadorDeItens/templates/sistema_de_cameras.html
@@ -29,7 +29,7 @@
               <div class="card-icon mb-3">🎓</div>
               <h5 class="card-title">Por video</h5>
               <p class="card-text">Carregue um video para o sistema de Identificação processar.</p>
-                <a class="btn btn-info" href="{% url 'sistema_de_cameras' %}">Carregar um video</a>
+                <a class="btn btn-info" href="{% url 'upload_video' %}">Carregar um video</a>
             </div>
           </div>
         </div>
